--- a/savedconfig/sys-kernel/gentoo-kernel-6.14.1
+++ b/savedconfig/sys-kernel/gentoo-kernel-6.14.1
@@ -1,8 +1,8 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.14.0-gentoo Kernel Configuration
+# Linux/x86 6.14.1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (Gentoo Hardened 14.2.1_p20250301 p8) 14.2.1 20250301"
+CONFIG_CC_VERSION_TEXT="x86_64-pc-linux-musl-gcc (Gentoo Hardened 14.2.1_p20250301 p8) 14.2.1 20250301"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=140201
 CONFIG_CLANG_VERSION=0
@@ -10504,7 +10504,7 @@ CONFIG_SIGNED_PE_FILE_VERIFICATION=y
 #
 # Certificates for signature checking
 #
-CONFIG_MODULE_SIG_KEY="/etc/kernel/kernel_key.pem"
+CONFIG_MODULE_SIG_KEY="/tmp/portage/sys-kernel/gentoo-kernel-6.14.1/temp/kernel_key.pem"
 CONFIG_MODULE_SIG_KEY_TYPE_RSA=y
 # CONFIG_MODULE_SIG_KEY_TYPE_ECDSA is not set
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
