--- a/savedconfig/sys-kernel/gentoo-sources-6.13.9
+++ b/savedconfig/sys-kernel/gentoo-sources-6.13.9
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.14.0-gentoo Kernel Configuration
+# Linux/x86 6.13.9-gentoo Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (Gentoo Hardened 14.2.1_p20250301 p8) 14.2.1 20250301"
 CONFIG_CC_IS_GCC=y
@@ -20,7 +20,6 @@ CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
-CONFIG_RUSTC_HAS_COERCE_POINTEE=y
 CONFIG_PAHOLE_VERSION=127
 CONFIG_CONSTRUCTORS=y
 CONFIG_IRQ_WORK=y
@@ -199,6 +198,7 @@ CONFIG_HAVE_UNSTABLE_SCHED_CLOCK=y
 #
 CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_BUCKETS_COUNT=5
+# CONFIG_SCHED_ALT is not set
 # end of Scheduler features
 
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
@@ -228,7 +228,6 @@ CONFIG_SCHED_MM_CID=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CGROUP_PIDS=y
 CONFIG_CGROUP_RDMA=y
-# CONFIG_CGROUP_DMEM is not set
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_HUGETLB=y
 CONFIG_CPUSETS=y
@@ -482,7 +481,6 @@ CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS=y
 CONFIG_X86_MCE=y
 CONFIG_X86_MCELOG_LEGACY=y
 CONFIG_X86_MCE_INTEL=y
-# CONFIG_X86_MCE_AMD is not set
 CONFIG_X86_MCE_THRESHOLD=y
 CONFIG_X86_MCE_INJECT=m
 
@@ -1188,10 +1186,7 @@ CONFIG_HAVE_BOOTMEM_INFO_NODE=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE=y
 CONFIG_MEMORY_HOTPLUG=y
-CONFIG_MHP_DEFAULT_ONLINE_TYPE_OFFLINE=y
-# CONFIG_MHP_DEFAULT_ONLINE_TYPE_ONLINE_AUTO is not set
-# CONFIG_MHP_DEFAULT_ONLINE_TYPE_ONLINE_KERNEL is not set
-# CONFIG_MHP_DEFAULT_ONLINE_TYPE_ONLINE_MOVABLE is not set
+# CONFIG_MEMORY_HOTPLUG_DEFAULT_ONLINE is not set
 CONFIG_MEMORY_HOTREMOVE=y
 CONFIG_MHP_MEMMAP_ON_MEMORY=y
 CONFIG_ARCH_MHP_MEMMAP_ON_MEMORY_ENABLE=y
@@ -1270,8 +1265,6 @@ CONFIG_EXECMEM=y
 CONFIG_NUMA_MEMBLKS=y
 # CONFIG_NUMA_EMU is not set
 CONFIG_ARCH_HAS_USER_SHADOW_STACK=y
-CONFIG_ARCH_SUPPORTS_PT_RECLAIM=y
-CONFIG_PT_RECLAIM=y
 
 #
 # Data Access Monitoring
@@ -1280,6 +1273,7 @@ CONFIG_DAMON=y
 CONFIG_DAMON_VADDR=y
 CONFIG_DAMON_PADDR=y
 CONFIG_DAMON_SYSFS=y
+# CONFIG_DAMON_DBGFS_DEPRECATED is not set
 CONFIG_DAMON_RECLAIM=y
 # CONFIG_DAMON_LRU_SORT is not set
 # end of Data Access Monitoring
@@ -1320,7 +1314,6 @@ CONFIG_XFRM_ESP=m
 CONFIG_XFRM_IPCOMP=m
 CONFIG_NET_KEY=m
 CONFIG_NET_KEY_MIGRATE=y
-# CONFIG_XFRM_IPTFS is not set
 CONFIG_XFRM_ESPINTCP=y
 CONFIG_SMC=m
 CONFIG_SMC_DIAG=m
@@ -2339,8 +2332,6 @@ CONFIG_FW_CFG_SYSFS=m
 CONFIG_SYSFB=y
 # CONFIG_SYSFB_SIMPLEFB is not set
 CONFIG_FW_CS_DSP=m
-CONFIG_FW_CS_DSP_KUNIT_TEST_UTILS=m
-CONFIG_FW_CS_DSP_KUNIT_TEST=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 
 #
@@ -2634,10 +2625,10 @@ CONFIG_DW_XDATA_PCIE=m
 # CONFIG_PCI_ENDPOINT_TEST is not set
 # CONFIG_XILINX_SDFEC is not set
 CONFIG_MISC_RTSX=m
-# CONFIG_NTSYNC is not set
 CONFIG_TPS6594_ESM=m
 CONFIG_TPS6594_PFSM=m
 CONFIG_NSM=m
+# CONFIG_MCHP_LAN966X_PCI is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -3336,6 +3327,7 @@ CONFIG_NET_VENDOR_NVIDIA=y
 CONFIG_FORCEDETH=m
 CONFIG_NET_VENDOR_OKI=y
 CONFIG_ETHOC=m
+# CONFIG_OA_TC6 is not set
 CONFIG_NET_VENDOR_PACKET_ENGINES=y
 CONFIG_HAMACHI=m
 CONFIG_YELLOWFIN=m
@@ -3501,7 +3493,6 @@ CONFIG_QCA83XX_PHY=m
 CONFIG_QCA808X_PHY=m
 CONFIG_QSEMI_PHY=m
 CONFIG_REALTEK_PHY=m
-CONFIG_REALTEK_PHY_HWMON=y
 # CONFIG_RENESAS_PHY is not set
 # CONFIG_ROCKCHIP_PHY is not set
 CONFIG_SMSC_PHY=m
@@ -3890,7 +3881,6 @@ CONFIG_RTW88_8821AU=m
 CONFIG_RTW88_8812AU=m
 # CONFIG_RTW88_DEBUG is not set
 # CONFIG_RTW88_DEBUGFS is not set
-CONFIG_RTW88_LEDS=y
 CONFIG_RTW89=m
 CONFIG_RTW89_CORE=m
 CONFIG_RTW89_PCI=m
@@ -3987,6 +3977,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 CONFIG_INPUT_JOYDEV=m
 CONFIG_INPUT_EVDEV=y
+# CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KUNIT_TEST=m
 
 #
@@ -4543,7 +4534,6 @@ CONFIG_SPI_DLN2=m
 CONFIG_SPI_INTEL=m
 CONFIG_SPI_INTEL_PCI=m
 CONFIG_SPI_INTEL_PLATFORM=m
-# CONFIG_SPI_KSPI2 is not set
 # CONFIG_SPI_LM70_LLP is not set
 CONFIG_SPI_LJCA=m
 CONFIG_SPI_MICROCHIP_CORE=m
@@ -4586,7 +4576,10 @@ CONFIG_PPS=y
 CONFIG_PPS_CLIENT_LDISC=m
 CONFIG_PPS_CLIENT_PARPORT=m
 CONFIG_PPS_CLIENT_GPIO=m
-# CONFIG_PPS_GENERATOR is not set
+
+#
+# PPS generators support
+#
 
 #
 # PTP clock support
@@ -4857,7 +4850,6 @@ CONFIG_CHARGER_RT9471=m
 CONFIG_CHARGER_CROS_USBPD=m
 CONFIG_CHARGER_CROS_PCHG=m
 CONFIG_CHARGER_CROS_CONTROL=m
-# CONFIG_FUEL_GAUGE_STC3117 is not set
 CONFIG_CHARGER_BD99954=m
 CONFIG_BATTERY_SURFACE=m
 CONFIG_CHARGER_SURFACE=m
@@ -5010,7 +5002,6 @@ CONFIG_SENSORS_ADM1275=m
 CONFIG_SENSORS_ADP1050=m
 CONFIG_SENSORS_BEL_PFE=m
 CONFIG_SENSORS_BPA_RS600=m
-# CONFIG_SENSORS_CRPS is not set
 CONFIG_SENSORS_DELTA_AHE50DC_FAN=m
 CONFIG_SENSORS_FSP_3Y=m
 # CONFIG_SENSORS_IBM_CFFPS is not set
@@ -5058,7 +5049,6 @@ CONFIG_SENSORS_Q54SJ108A2=m
 # CONFIG_SENSORS_STPDDC60 is not set
 CONFIG_SENSORS_TDA38640=m
 CONFIG_SENSORS_TDA38640_REGULATOR=y
-# CONFIG_SENSORS_TPS25990 is not set
 CONFIG_SENSORS_TPS40422=m
 CONFIG_SENSORS_TPS53679=m
 CONFIG_SENSORS_TPS546D24=m
@@ -5406,8 +5396,6 @@ CONFIG_MFD_CS40L50_SPI=m
 CONFIG_MFD_INTEL_M10_BMC_CORE=m
 CONFIG_MFD_INTEL_M10_BMC_SPI=m
 CONFIG_MFD_INTEL_M10_BMC_PMCI=m
-# CONFIG_MFD_QNAP_MCU is not set
-# CONFIG_MFD_UPBOARD_FPGA is not set
 # end of Multifunction device drivers
 
 CONFIG_REGULATOR=y
@@ -6470,7 +6458,6 @@ CONFIG_DRM_MIPI_DBI=m
 CONFIG_DRM_KUNIT_TEST_HELPERS=m
 CONFIG_DRM_KUNIT_TEST=m
 CONFIG_DRM_KMS_HELPER=y
-CONFIG_DRM_DRAW=y
 CONFIG_DRM_PANIC=y
 CONFIG_DRM_PANIC_FOREGROUND_COLOR=0xffffff
 CONFIG_DRM_PANIC_BACKGROUND_COLOR=0x000000
@@ -6489,9 +6476,6 @@ CONFIG_DRM_CLIENT_SETUP=y
 CONFIG_DRM_FBDEV_EMULATION=y
 CONFIG_DRM_FBDEV_OVERALLOC=100
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
-# CONFIG_DRM_CLIENT_LOG is not set
-CONFIG_DRM_CLIENT_DEFAULT_FBDEV=y
-CONFIG_DRM_CLIENT_DEFAULT="fbdev"
 # end of Supported DRM clients
 
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
@@ -6499,7 +6483,6 @@ CONFIG_DRM_DISPLAY_HELPER=y
 CONFIG_DRM_DISPLAY_DP_AUX_CEC=y
 CONFIG_DRM_DISPLAY_DP_AUX_CHARDEV=y
 CONFIG_DRM_DISPLAY_DP_HELPER=y
-CONFIG_DRM_DISPLAY_HDMI_AUDIO_HELPER=y
 CONFIG_DRM_DISPLAY_HDMI_HELPER=y
 CONFIG_DRM_DISPLAY_HDMI_STATE_HELPER=y
 CONFIG_DRM_TTM=y
@@ -6567,7 +6550,6 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # end of Display Interface Bridges
 
 # CONFIG_DRM_ETNAVIV is not set
-# CONFIG_DRM_HISI_HIBMC is not set
 # CONFIG_DRM_BOCHS is not set
 # CONFIG_DRM_CIRRUS_QEMU is not set
 # CONFIG_DRM_GM12U320 is not set
@@ -6731,7 +6713,6 @@ CONFIG_LOGO_LINUX_CLUT224=y
 # end of Graphics support
 
 CONFIG_DRM_ACCEL=y
-# CONFIG_DRM_ACCEL_AMDXDNA is not set
 # CONFIG_DRM_ACCEL_HABANALABS is not set
 CONFIG_DRM_ACCEL_IVPU=m
 # CONFIG_DRM_ACCEL_IVPU_DEBUG is not set
@@ -6895,7 +6876,6 @@ CONFIG_SND_HDA_SCODEC_CS35L56=m
 CONFIG_SND_HDA_SCODEC_CS35L56_I2C=m
 CONFIG_SND_HDA_SCODEC_CS35L56_SPI=m
 CONFIG_SND_HDA_SCODEC_TAS2781_I2C=m
-# CONFIG_SND_HDA_SCODEC_TAS2781_SPI is not set
 CONFIG_SND_HDA_CODEC_REALTEK=m
 CONFIG_SND_HDA_CODEC_ANALOG=m
 CONFIG_SND_HDA_CODEC_SIGMATEL=m
@@ -7639,6 +7619,14 @@ CONFIG_HID_MCP2221=m
 CONFIG_HID_BPF=y
 # end of HID-BPF support
 
+#
+# USB HID support
+#
+CONFIG_USB_HID=y
+CONFIG_HID_PID=y
+CONFIG_USB_HIDDEV=y
+# end of USB HID support
+
 CONFIG_I2C_HID=y
 CONFIG_I2C_HID_ACPI=m
 # CONFIG_I2C_HID_OF is not set
@@ -7665,21 +7653,6 @@ CONFIG_SURFACE_KBD=m
 # end of Surface System Aggregator Module HID support
 
 CONFIG_SURFACE_HID_CORE=m
-
-#
-# Intel THC HID Support
-#
-# CONFIG_INTEL_THC_HID is not set
-# end of Intel THC HID Support
-
-#
-# USB HID support
-#
-CONFIG_USB_HID=y
-CONFIG_HID_PID=y
-CONFIG_USB_HIDDEV=y
-# end of USB HID support
-
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
@@ -7745,7 +7718,11 @@ CONFIG_USB_WDM=m
 CONFIG_USB_TMC=m
 
 #
-# NOTE: USB_STORAGE depends on SCSI but BLK_DEV_SD may also be needed; see USB_STORAGE Help for more info
+# NOTE: USB_STORAGE depends on SCSI but BLK_DEV_SD may
+#
+
+#
+# also be needed; see USB_STORAGE Help for more info
 #
 CONFIG_USB_STORAGE=m
 # CONFIG_USB_STORAGE_DEBUG is not set
@@ -7916,7 +7893,6 @@ CONFIG_TYPEC_UCSI=m
 CONFIG_UCSI_CCG=m
 CONFIG_UCSI_ACPI=m
 CONFIG_UCSI_STM32G0=m
-CONFIG_CROS_EC_UCSI=m
 CONFIG_TYPEC_TPS6598X=m
 # CONFIG_TYPEC_ANX7411 is not set
 CONFIG_TYPEC_RT1719=m
@@ -7943,7 +7919,6 @@ CONFIG_TYPEC_MUX_TUSB1046=m
 #
 CONFIG_TYPEC_DP_ALTMODE=m
 CONFIG_TYPEC_NVIDIA_ALTMODE=m
-# CONFIG_TYPEC_TBT_ALTMODE is not set
 # end of USB Type-C Alternate Mode drivers
 
 CONFIG_USB_ROLE_SWITCH=y
@@ -8306,8 +8281,8 @@ CONFIG_INTEL_IOATDMA=m
 # CONFIG_PLX_DMA is not set
 # CONFIG_XILINX_DMA is not set
 # CONFIG_XILINX_XDMA is not set
-# CONFIG_AMD_PTDMA is not set
 # CONFIG_AMD_QDMA is not set
+# CONFIG_AMD_PTDMA is not set
 # CONFIG_QCOM_HIDMA_MGMT is not set
 # CONFIG_QCOM_HIDMA is not set
 CONFIG_DW_DMAC_CORE=m
@@ -8509,7 +8484,6 @@ CONFIG_CROS_EC_LIGHTBAR=m
 # CONFIG_CROS_EC_DEBUGFS is not set
 CONFIG_CROS_EC_SENSORHUB=m
 CONFIG_CROS_EC_SYSFS=m
-CONFIG_CROS_EC_TYPEC_ALTMODES=y
 CONFIG_CROS_EC_TYPEC=m
 CONFIG_CROS_HPS_I2C=m
 CONFIG_CROS_USBPD_LOGGER=m
@@ -9169,7 +9143,6 @@ CONFIG_AD7293=m
 # CONFIG_AD7303 is not set
 CONFIG_AD8460=m
 # CONFIG_AD8801 is not set
-# CONFIG_BD79703 is not set
 CONFIG_DPOT_DAC=m
 # CONFIG_DS4424 is not set
 CONFIG_LTC1660=m
@@ -9351,6 +9324,7 @@ CONFIG_GP2AP002=m
 CONFIG_HID_SENSOR_ALS=m
 # CONFIG_HID_SENSOR_PROX is not set
 # CONFIG_JSA1212 is not set
+# CONFIG_ROHM_BU27008 is not set
 CONFIG_ROHM_BU27034=m
 CONFIG_RPR0521=m
 # CONFIG_LTR390 is not set
@@ -9362,7 +9336,6 @@ CONFIG_MAX44009=m
 # CONFIG_NOA1305 is not set
 CONFIG_OPT3001=m
 CONFIG_OPT4001=m
-# CONFIG_OPT4060 is not set
 CONFIG_PA12203001=m
 # CONFIG_SI1133 is not set
 # CONFIG_SI1145 is not set
@@ -9818,7 +9791,6 @@ CONFIG_CUSE=m
 CONFIG_VIRTIO_FS=m
 CONFIG_FUSE_DAX=y
 CONFIG_FUSE_PASSTHROUGH=y
-CONFIG_FUSE_IO_URING=y
 CONFIG_OVERLAY_FS=m
 CONFIG_OVERLAY_FS_REDIRECT_DIR=y
 CONFIG_OVERLAY_FS_REDIRECT_ALWAYS_FOLLOW=y
@@ -10138,7 +10110,6 @@ CONFIG_PROC_MEM_ALWAYS_FORCE=y
 # CONFIG_PROC_MEM_FORCE_PTRACE is not set
 # CONFIG_PROC_MEM_NO_FORCE is not set
 CONFIG_SECURITY=y
-CONFIG_HAS_SECURITY_AUDIT=y
 CONFIG_SECURITYFS=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_SECURITY_INFINIBAND=y
@@ -10335,6 +10306,7 @@ CONFIG_CRYPTO_CTR=y
 CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_ECB=y
 CONFIG_CRYPTO_HCTR2=m
+# CONFIG_CRYPTO_KEYWRAP is not set
 CONFIG_CRYPTO_LRW=y
 CONFIG_CRYPTO_PCBC=m
 CONFIG_CRYPTO_XCTR=m
@@ -10374,6 +10346,7 @@ CONFIG_CRYPTO_SHA512=y
 CONFIG_CRYPTO_SHA3=y
 # CONFIG_CRYPTO_SM3_GENERIC is not set
 CONFIG_CRYPTO_STREEBOG=m
+# CONFIG_CRYPTO_VMAC is not set
 CONFIG_CRYPTO_WP512=m
 CONFIG_CRYPTO_XCBC=m
 CONFIG_CRYPTO_XXHASH=y
@@ -10464,6 +10437,9 @@ CONFIG_CRYPTO_SHA256_SSSE3=m
 CONFIG_CRYPTO_SHA512_SSSE3=m
 # CONFIG_CRYPTO_SM3_AVX_X86_64 is not set
 CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=m
+CONFIG_CRYPTO_CRC32C_INTEL=m
+# CONFIG_CRYPTO_CRC32_PCLMUL is not set
+# CONFIG_CRYPTO_CRCT10DIF_PCLMUL is not set
 # end of Accelerated Cryptographic Algorithms for CPU (x86)
 
 CONFIG_CRYPTO_HW=y
@@ -10569,19 +10545,19 @@ CONFIG_CRYPTO_LIB_SHA256=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 CONFIG_CRC_T10DIF=y
-CONFIG_ARCH_HAS_CRC_T10DIF=y
-CONFIG_CRC_T10DIF_ARCH=y
 CONFIG_CRC64_ROCKSOFT=y
 CONFIG_CRC_ITU_T=m
 CONFIG_CRC32=y
-CONFIG_ARCH_HAS_CRC32=y
-CONFIG_CRC32_ARCH=y
+# CONFIG_CRC32_SELFTEST is not set
+CONFIG_CRC32_SLICEBY8=y
+# CONFIG_CRC32_SLICEBY4 is not set
+# CONFIG_CRC32_SARWATE is not set
+# CONFIG_CRC32_BIT is not set
 CONFIG_CRC64=y
 CONFIG_CRC4=m
 CONFIG_CRC7=m
 CONFIG_LIBCRC32C=y
 CONFIG_CRC8=m
-CONFIG_CRC_OPTIMIZATIONS=y
 CONFIG_XXHASH=y
 # CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_842_COMPRESS=y
@@ -10942,8 +10918,6 @@ CONFIG_DEBUG_NOTIFIERS=y
 CONFIG_TORTURE_TEST=m
 # CONFIG_RCU_SCALE_TEST is not set
 CONFIG_RCU_TORTURE_TEST=m
-# CONFIG_RCU_TORTURE_TEST_CHK_RDR_STATE is not set
-# CONFIG_RCU_TORTURE_TEST_LOG_CPU is not set
 # CONFIG_RCU_REF_SCALE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_RCU_EXP_CPU_STALL_TIMEOUT=0
@@ -10962,13 +10936,11 @@ CONFIG_HAVE_RETHOOK=y
 CONFIG_RETHOOK=y
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
-CONFIG_HAVE_FUNCTION_GRAPH_FREGS=y
-CONFIG_HAVE_FTRACE_GRAPH_FUNC=y
+CONFIG_HAVE_FUNCTION_GRAPH_RETVAL=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_REGS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_DIRECT_CALLS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_ARGS=y
-CONFIG_HAVE_FTRACE_REGS_HAVING_PT_REGS=y
 CONFIG_HAVE_DYNAMIC_FTRACE_NO_PATCHABLE=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
 CONFIG_HAVE_SYSCALL_TRACEPOINTS=y
@@ -11093,7 +11065,6 @@ CONFIG_KUNIT_TEST=m
 CONFIG_KUNIT_EXAMPLE_TEST=m
 CONFIG_KUNIT_ALL_TESTS=m
 # CONFIG_KUNIT_DEFAULT_ENABLED is not set
-CONFIG_KUNIT_AUTORUN_ENABLED=y
 # CONFIG_NOTIFIER_ERROR_INJECTION is not set
 # CONFIG_FUNCTION_ERROR_INJECTION is not set
 # CONFIG_FAULT_INJECTION is not set
@@ -11131,7 +11102,6 @@ CONFIG_TEST_KSTRTOX=y
 # CONFIG_TEST_MAPLE_TREE is not set
 # CONFIG_TEST_RHASHTABLE is not set
 # CONFIG_TEST_IDA is not set
-CONFIG_TEST_MISC_MINOR=m
 # CONFIG_TEST_PARMAN is not set
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_BITOPS is not set
@@ -11159,10 +11129,9 @@ CONFIG_IS_SIGNED_TYPE_KUNIT_TEST=m
 CONFIG_OVERFLOW_KUNIT_TEST=m
 CONFIG_STACKINIT_KUNIT_TEST=m
 CONFIG_FORTIFY_KUNIT_TEST=m
-CONFIG_CRC_KUNIT_TEST=m
-# CONFIG_CRC_BENCHMARK is not set
 CONFIG_SIPHASH_KUNIT_TEST=m
 CONFIG_USERCOPY_KUNIT_TEST=m
+CONFIG_CRC16_KUNIT_TEST=m
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_TEST_STATIC_KEYS is not set
 # CONFIG_TEST_DYNAMIC_DEBUG is not set
@@ -11176,7 +11145,6 @@ CONFIG_USERCOPY_KUNIT_TEST=m
 # CONFIG_TEST_CLOCKSOURCE_WATCHDOG is not set
 # CONFIG_TEST_OBJPOOL is not set
 CONFIG_INT_POW_TEST=m
-CONFIG_INT_SQRT_KUNIT_TEST=m
 CONFIG_ARCH_USE_MEMTEST=y
 CONFIG_MEMTEST=y
 # CONFIG_HYPERV_TESTING is not set
